@@ -1,6 +1,7 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
 
+29 Dec 2005 Fix bug in update_tod_clock preventing cpt from updating - Fish
 29 Dec 2005 Fix cpustate display glitch in ipending command - Fish
 29 Dec 2005 SIE XC interception fixes - Jan Jaeger
 29 Dec 2005 Performance patch STCM, STCMY, STCMH - Bernard van der Helm
